package edu.fiuba.algo3.model.Efectos;

import edu.fiuba.algo3.model.Jugador.Jugador;

public interface IEfecto {

  void aplicarEfecto(Jugador jugador);
}
